# chess-dojo

./: .gitignore  CLAUDE.md  README.md  TODO.md  deploy.sh  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  app_state.py  guest_auth.py  main.py  models.py  positions.json  pyproject.toml
backend/api/: app.py
backend/matchmaking/: consumer.py  daemon.py  game_request_store.py
backend/shared/: game_store.py  logging.py  positions.py  redis.py  utils.py
backend/tests/: conftest.py  test_endpoint.py  test_websocket.py  test_websocket_auth.py  test_websocket_protocols.py
backend/websocket/: endpoint.py  manager.py  models.py
frontend/: index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: DebugPanel.tsx  WebSocketProvider.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/queries/: games.ts
frontend/src/routes/: $gameId.css  $gameId.tsx  __root.tsx  analysis.tsx  broadcast.tsx  index.css  index.tsx  player.tsx  root.css  training.tsx
terraform/: acm.tf  alb.tf  cloudfront.tf  cloudfront_function.js  ecr.tf  ecs.tf  elasticache.tf  iam.tf  main.tf  outputs.tf  s3.tf  secrets.tf  security_groups.tf  variables.tf  vpc.tf
