[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "itsdangerous>=2.2.0",
    "redis>=7.2.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
