[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chess>=1.11.2",
    "fastapi[standard]>=0.129.0",
    "itsdangerous>=2.2.0",
    "redis>=7.2.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
